# attack_scripts

./: .gitignore  Makefile  README.MD  config.json  config.py  deploy.py  docker-compose.yml  requirements.txt  test_attack.py
app/: Dockerfile  __init__.py  app.py  backend.py  config.py  logger.py  pyproject.toml  requirements.txt  testthreading.py
app/ctf_suite/: __init__.py  _exploits.py  common.py  db.py  decorators.py
app/milkman/: __main__.py  config.py  db.py  decorators.py  exploits.py  lipsum.py  logger.py  singleton.py
app/milkman/processes/: FileObserver.py  FlagSubmitter.py  GametickManager.py  __init__.py
app/src/milkman/: __main__.py  config.py  db.py  exploits.py  lipsum.py  logger.py  singleton.py  utils.py
app/src/milkman/processes/: FileObserver.py  GametickManager.py
app/static/styles/: index.css
app/templates/: index.html  sockets.js
config/: config.json
config/exploits/: example.py  ndi.py  sqli.py
configs/: config.json
ctf_suite/: __init__.py  _db.py  _exploits.py  common.py  db.py  decorators.py
exploits/: _example.py  _message_sniff.py  _sql_injection_login.py  _uid_biomarket.py  common.py  example.py  ndi.py  sqli.py
web/: Dockerfile  backend.py  package-lock.json  package.json  requirements.txt  status_scraper.py
web/static/scripts/: config.js
web/static/styles/: index.css
web/templates/: all.html  base.html  configs.html  exploits.html  index.html  logs.html  navbar.html  old.html  oldindex.html  status.html
