[project]
name = "milkman"
version = "0.1.0"
dependencies = [
    "requests",
    "pymongo",
    "watchdog",
    "inotify",
    "loguru",
    "jsonschema",
    "pwntools",
    "pycryptodome",
    "pillow",
    "numpy",
    "randcrack"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["milkman"]
