[project]
name = "milkman"
version = "0.2.0"
dependencies = [
    "morel",
    "requests",
    "pymongo",
    "watchdog",
    "inotify",
    "jsonschema",
    "pwntools",
    "pycryptodome",
    "pillow",
    "numpy",
    "randcrack",
    "beautifulsoup4",
    "sympy",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
